@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "POLYGLOT 6"
-.TH POLYGLOT 6 "2009-07-26" "" ""
+.TH POLYGLOT 6 "2009-08-03" "" ""
 .SH "NAME"
 PolyGlot \-  Winboard protocol to UCI protocol adapter
          \-  book engine for Polyglot books 
@@ -148,7 +148,7 @@ polyglot merge-book \-in1 inputfile1 \-in2 inputfile2 [\-out outputfile]
 .PP
 polyglot info-book [\-bin inputfile] [\-exact]
 .PP
-polyglot dumb-book [\-bin inputfile] \-color color [\-out outputfile]
+polyglot dump-book [\-bin inputfile] \-color color [\-out outputfile]
 .PP
 polyglot [configfile] epd-test [\-epd inputfile] [\-min\-depth depth] [\-max\-depth depth] [\-max\-time time] [\-depth\-delta delta] 
 .PP
